# opencv_learning

./: CMakeLists.txt  README.md  build_linux.sh  build_window.bat
basic/: main-002-filter2D.cpp  main-003.cpp  main-004.cpp  main-005.cpp  main-006.cpp  main-007.cpp  main-008.cpp  main-010.cpp  main-011.cpp  main-012-dilate_erode.cpp  main-013.cpp  main-014.cpp  main-015.cpp  main-016-thresh.cpp  main-017.cpp  main-018.cpp  main-019.cpp  main-020.cpp  main-021.cpp  main-022-houghLines.cpp  main-023-houghCircles.cpp  main-024-remap.cpp  main-025-equalizeHist.cpp  main-026-calcHist.cpp  main-027-compareHist.cpp  main-028-calcBackProject.cpp  main-029-match.cpp  main-030-contours.cpp  main-031-convexHull.cpp  main-032-boundingRect.cpp  main-033-moments.cpp  main-034-pointPolygonTest.cpp  main-035-watershed.cpp  main.cpp
basic/opencv-001/opencv-001/: main.cpp  opencv-001.vcxproj  opencv-001.vcxproj.filters  opencv430x64.props  test.cpp
basic/opencv-001/opencv-001/x64/Debug/: vc142.idb
basic/opencv-001/opencv-001/x64/Debug/opencv-001.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  opencv-001.lastbuildstate
basic/opencv-001/x64/Debug/: opencv-001.ilk
data/: REDEME.txt
featrue/: 03-corner_harris.cpp  04-shitomasi_corner.cpp  05-mycustom_corner.cpp  06-subpixel_corner.cpp  07-surf_demo.cpp  08-sift_demo.cpp
hog_svm/: README.md  hog.py  non_maximum.py
